--- a/f103rc.msb.gpio.led.ioc
+++ b/f103rc.msb.gpio.led.ioc
@@ -8,14 +8,16 @@ Mcu.IP2=SYS
 Mcu.IPNb=3
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PD0-OSC_IN
-Mcu.Pin1=PD1-OSC_OUT
-Mcu.Pin2=PA8
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PD2
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.PinsNb=7
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin2=PD0-OSC_IN
+Mcu.Pin3=PD1-OSC_OUT
+Mcu.Pin4=PA8
+Mcu.Pin5=PA13
+Mcu.Pin6=PA14
+Mcu.Pin7=PD2
+Mcu.Pin8=VP_SYS_VS_tim8
+Mcu.PinsNb=9
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RCTx
@@ -30,6 +32,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM8_UP_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TimeBase=TIM8_UP_IRQn
+NVIC.TimeBaseIP=TIM8
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
@@ -43,6 +48,10 @@ PA8.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA8.Locked=true
 PA8.PinState=GPIO_PIN_SET
 PA8.Signal=GPIO_Output
+PC14-OSC32_IN.Mode=LSE-External-Clock-Source
+PC14-OSC32_IN.Signal=RCC_OSC32_IN
+PC15-OSC32_OUT.Mode=LSE-External-Clock-Source
+PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PCC.Checker=false
 PCC.Line=STM32F103
 PCC.MCU=STM32F103R(C-D-E)Tx
@@ -115,7 +124,7 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim8.Mode=TIM8
+VP_SYS_VS_tim8.Signal=SYS_VS_tim8
 board=custom
 isbadioc=false
